# w3csaw

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
examples/: sample_report.md
iis_hunter/: __init__.py  cli.py  engine.py  parser.py  rules.py  store.py
iis_hunter/web/: app.py
iis_hunter/web/static/: index.html
rules/aggregation/: iis_agg_high_500_errors_single_source.yml  iis_agg_high_request_volume_single_source.yml  iis_agg_path_high_source_volume.yml  iis_agg_repeated_post_dynamic_script.yml
rules/auth/: iis_auth_admin_login_endpoint_access.yml  iis_auth_exchange_powershell_endpoint_access.yml  iis_bruteforce_then_success.yml
rules/rce/: iis_rce_lolbin_in_url.yml  iis_rce_powershell_download_cradle.yml  iis_rce_ssrf_cloud_metadata.yml
rules/scanning/: iis_scanning_missing_or_empty_user_agent.yml  iis_scanning_secret_and_dotfile_access.yml  iis_scanning_uncommon_http_method.yml  iis_xss_indicators.yml
rules/traversal/: iis_traversal_iis_source_disclosure.yml  iis_traversal_web_config_access.yml
rules/upload/: iis_upload_archive_or_executable_access.yml  iis_upload_dangerous_extension_write.yml  iis_upload_suspicious_filename_pattern.yml
rules/webshell/: iis_webshell_file_manager_parameters.yml  iis_webshell_known_filenames.yml  iis_webshell_unusual_method_dynamic_script.yml
tests/: conftest.py  test_aggregations.py  test_cli.py  test_console.py  test_csv_parser.py  test_engine.py  test_help.py  test_iis_hunter.py  test_normalizer.py  test_outputs.py  test_parser.py  test_rules.py  test_web_api.py
tests/fixtures/broken_rules/: bad_rules.yml
w3csaw/: __init__.py  aggregations.py  cli.py  console.py  engine.py  interactive.py  normalizer.py  outputs.py  parser.py  report.py  rules.py  utils.py
w3csaw/rules/aggregation/: iis_agg_auth_failures_bruteforce.yml  iis_agg_high_403_single_source.yml  iis_agg_high_request_volume_single_source.yml  iis_agg_path_high_source_volume.yml  iis_agg_rare_successful_sensitive_file.yml  iis_agg_repeated_access_single_dynamic_script.yml  (+4 more)
(+48 files in other folders)
