[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "iis_hunter"
version = "1.0.0"
description = "Real-time threat hunting and forensic analysis for IIS logs (CLI + web UI)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mohammed Alzahrani" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[project.scripts]
iis-hunter = "iis_hunter.cli:main"

[tool.setuptools.packages.find]
include = ["iis_hunter*"]

[tool.setuptools.package-data]
"iis_hunter.web" = ["static/*"]
