[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "w3csaw"
version = "0.1.1"
description = "Chainsaw-style DFIR hunting for IIS W3C logs."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mohammed Alzahrani" }]
requires-python = ">=3.9"
keywords = ["dfir", "iis", "threat-hunting", "detection", "w3c", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = ["PyYAML>=6.0", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
w3csaw = "w3csaw.cli:main"

[project.urls]
Homepage = "https://github.com/mzalzahrani/w3csaw"

[tool.setuptools]
packages = ["w3csaw"]

[tool.setuptools.package-data]
w3csaw = ["rules/*/*.yml", "rules/*/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
